[package]
name = "iced_filechooser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.12", features = [
	"tokio",
	"debug",
	"image",
	"advanced",
	"image",
	"svg",
] }
iced_runtime = "0.12"
iced_aw = "0.9.3"
tokio = { version = "1.28", features = ["full"] }
iced_futures = "0.12.0"
env_logger = "0.10.0"
xdg-mime = "0.3.3"
libc = "0.2.148"
chrono = "0.4.31"
anyhow = "1.0.75"
users = "0.11.0"
once_cell = "1.18.0"
glob = "0.3.1"
mime = "0.3.17"
iced_layershell = "0.2.6"
